
$Id: changes.txt,v 1.45 2006/01/09 20:51:20 disconn3ct Exp $

----
MVDSV v0.19.01-CVS build 22?? (2006.??.??)
- bugfix to bliP's sv_speedcheck: round to nearest value instead of rounding down
  This bug cause to wrong frametime --> wrong /fpslist (ktpro/ktx commands) output.
- To run server you only need a map (.bsp file), qwprogs and mvdsv executable.
  You even dont need pak0.pak, etc (by disconnect) // from ZQuake
- A thousand bugfixes i found at ZQuake (like merge pmtrace_t with trace_t, etc),
  but i dont think i have to write it here, since only developers 
  can understand it :P } (by disconnect)
- sv_nailhack is 1 by default. Dunno why it was set 0 at begin of 'mvd-era'. (by disconnect)
- new cvar "sv_maxuserid" 99 by default. limits userid in 1...99 range. (by disconnect)
- hardcore cleanup. Removed lot of client-onlt code (by Angel)
- removed client sources. MVDSV now consist of server and qwdtools only (by Angel)
- server-side flash for TeamFortress (oldgrens mode) (ported by Angel from QW262)
- work on SunOS SPARC and ix86 targets now
- added MSVC 7.1 solution/project file
[server]
- added possibility to set small speed for objects on map
(by ivan)
- added possibility to set non integer volume for sounds from mods
(by ivan)
- added possibility to record multiple demos at same time (from FTE by disconnect)
- FTE's QTV (FTV) support (from FTE by disconnect) :
  - mvd_streamport - cvar, to control a port for MVD data streaming
  - mvd_maxstreams - cvar, to control the maximum number of proxies to allow to connect 
  directly to the server.
- build: removed define REGEX - can't build only with external regex lib
- new cmd dlistr, cmd dlistregex, cmd demolistr, cmd demolistregex -
  same as demolist, but use parameters as regex
- new commands:
    lastscores - same as cmd lastscores, but in server console
    dlist - same as demolist
    dlistr, demolistr, dlistregex, demolistregex - same as cmd dlistr
- new connectionless commands: